@@ -35,7 +35,10 @@ To avoid compilation warning use the new syntax.
 Pcaml.add_option "-help_seq" (Arg.Unit help_sequences)
   "    Print explanations about new sequences and exit.";;
 
+let odfa = !(Plexer.dollar_for_antiquotation) in
+Plexer.dollar_for_antiquotation := false;
 Grammar.Unsafe.reinit_gram gram (Plexer.make ());
+Plexer.dollar_for_antiquotation := odfa;
 Grammar.Unsafe.clear_entry interf;
 Grammar.Unsafe.clear_entry implem;
 Grammar.Unsafe.clear_entry top_phrase;
